💄 Add login UI and styles

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,18 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('//fast.fonts.net/cssapi/a021305f-9112-4657-b548-4051646a1da6.css');
+@import url('//use.typekit.net/bwe1eyi.css');
+@import url('//cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.css');
 
+// Reset
+@import 'includes/reset';
 // Variables
-@import 'variables';
+@import 'includes/variables';
+@import 'includes/core';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+//@import '~bootstrap/scss/bootstrap';
+
+// Unsorted
+@import 'includes/unsorted';
+
+
