🏗 Continue work on admin dashboard
- Active Users & New Signups now working

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,7 @@
 // Core
 @import 'includes/core';
 @import 'includes/logo';
+@import 'includes/dashboard';
 
 // Plugins
 @import 'includes/select2/core';
