--- a/resources/sass/includes/_core.scss
+++ b/resources/sass/includes/_core.scss
@@ -103,6 +103,12 @@ label.checkbox-field {
     }
 }
 
+body.main {
+    .content {
+        background: #eeebf0;
+    }
+}
+
 /** START Alerts **/
 .alert {
     display: flex;
