--- a/public/css/app.css
+++ b/public/css/app.css
@@ -273,6 +273,10 @@ label.checkbox-field:hover input ~ .checkmark {
   border-color: #1f1844;
 }
 
+body.main .content {
+  background: #eeebf0;
+}
+
 /** START Alerts **/
 
 .alert {
@@ -354,6 +358,14 @@ label.checkbox-field:hover input ~ .checkmark {
 body.full-screen #logo #castle,
 body.full-screen #logo #words {
   fill: #FFFFFF;
+}
+
+.dashboard-wrapper {
+  padding: 37px 20px;
+}
+
+.dashboard-wrapper.admin-dash {
+  padding: 0 20px 20px 20px;
 }
 
 .select2-container {
@@ -2534,17 +2546,17 @@ body.main nav .container h1 {
 
 @media screen and (max-width: 600px) {
   body.main nav .container h1 {
-    width: 25%;
+    width: 145px;
     margin: 0;
     position: absolute;
-    top: 10%;
-    left: 4%;
+    top: 8px;
+    left: 20px;
   }
 }
 
 @media screen and (max-width: 500px) {
   body.main nav .container h1 {
-    width: 35%;
+    width: 145px;
   }
 }
 
@@ -2706,19 +2718,20 @@ body.main .overlay {
   overflow-x: hidden;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+body.main .overlay.open {
+  -webkit-transform: translate(0%);
+          transform: translate(0%);
 }
 
 body.main .overlay .hamlogo {
-  width: 35%;
+  width: 145px;
   position: absolute;
-  top: 25px;
-  left: 45px;
-}
-
-@media screen and (min-width: 800px) {
-  body.main .overlay .hamlogo {
-    width: 15%;
-  }
+  top: 13px;
+  left: 25px;
 }
 
 body.main .overlay-content {
@@ -2801,20 +2814,25 @@ body.main .overlay a:focus {
 
 body.main .overlay .closebtn {
   position: absolute;
-  top: 20px;
-  right: 45px;
+  top: 13px;
+  right: 20px;
   font-size: 60px;
+  line-height: 50px;
 }
 
 @media screen and (max-height: 600px) {
+  body.main .overlay .hamlogo {
+    width: auto;
+    height: 40px;
+  }
+
   body.main .overlay a {
     font-size: 20px;
   }
 
   body.main .overlay .closebtn {
     font-size: 40px;
-    top: 15px;
-    right: 35px;
+    line-height: 40px;
   }
 }
 
@@ -9936,8 +9954,8 @@ body.notification-page .sitterbooking.overlay3 .btn-container {
           justify-content: space-between;
   width: 110px;
   border-bottom: solid 2px #f4ba46;
-  padding-bottom: 10px;
-  padding-top: 15px;
+  padidng-top: 2px;
+  line-height: 26px;
   font-weight: bold;
   cursor: pointer;
 }
