--- a/resources/sass/includes/_dashboard.scss
+++ b/resources/sass/includes/_dashboard.scss
@@ -5,3 +5,14 @@
         padding: 0 20px 20px 20px
     }
 }
+
+.btn {
+    &.btn-logout {
+        i {
+            font-size: 24px;
+            line-height: 38px;
+            vertical-align: middle;
+            margin-right: 8px;
+        }
+    }
+}
