--- a/resources/sass/includes/_hammer.scss
+++ b/resources/sass/includes/_hammer.scss
@@ -615,7 +615,8 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
     }
 
     /* HIDE RADIO */
-    [type=radio] {
+    input[type=radio],
+    input.imagetoggle {
         position: absolute;
 
         opacity: 0;
@@ -623,7 +624,8 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
         height: 0;
     }
     /* IMAGE STYLES */
-    input[type=radio] + img{
+    input[type=radio] + img,
+    input.imagetoggle + img {
         cursor: pointer;
     }
 
@@ -634,7 +636,8 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
 
     }
 
-    input[type=radio] + img.infant-img {
+    input[type=radio] + img.infant-img,
+    input.imagetoggle + img.infant-img {
         // content:"";
         // background-image:url("images/infant-icon.png");
         // width:70px;
@@ -642,14 +645,14 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
         //  border:none;
     }
 
-    input[type=radio] + .infant-img{
+    input[type=radio] + .infant-img,
+    input.imagetoggle + .infant-img{
 
     }
 
 
-
-
-    input[type=radio] + .toddler-img {
+    input[type=radio] + .toddler-img,
+    input.imagetoggle + .toddler-img {
         content:"";
         background-image:url("images/toddler-icon.svg");
         width:70px;
@@ -657,13 +660,14 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
         border:none;
     }
 
-    input[type=radio] + .toddler-img:hover {
-
+    input[type=radio] + .toddler-img:hover,
+    input.imagetoggle + .toddler-img:hover {
         background-image:url("images/toddler-icon-hover.svg");
         transition-duration: .3s;
     }
 
-    input[type=radio] + .school-age-img {
+    input[type=radio] + .school-age-img,
+    input.imagetoggle + .school-age-img {
         content:"";
         background-image:url("images/school-age-icon.svg");
         width:70px;
@@ -671,18 +675,21 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
         border:none;
     }
 
-    input[type=radio] + .school-age-img:hover {
+    input[type=radio] + .school-age-img:hover,
+    input.imagetoggle + .school-age-img:hover {
 
         background-image:url("images/school-age-icon-hover.svg");
         transition-duration: .3s;
     }
 
     /* CHECKED STYLES */
-    input[type=radio]:checked + svg {
+    input[type=radio]:checked + svg,
+    input.imagetoggle:checked + svg {
         fill: $dpurple;
     }
 
-    input[type=radio]:checked + .toddler-img {
+    input[type=radio]:checked + .toddler-img,
+    input.imagetoggle:checked + .toddler-img {
         content:"";
         background-image:url("images/toddler-icon-click.svg");
         width:70px;
@@ -690,7 +697,8 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
         border:none;
     }
 
-    input[type=radio]:checked + .school-age-img {
+    input[type=radio]:checked + .school-age-img,
+    input.imagetoggle:checked + .school-age-img {
         content:"";
         background-image:url("images/school-age-icon-click.svg");
         width:70px;
@@ -5331,6 +5339,7 @@ body.main .content{
 
             @media screen and (max-width: 600px){
                 width: 100%;
+                border-bottom-color: $orange;
             }
 
         }
@@ -5389,6 +5398,10 @@ body.main .content{
         margin: 0;
         top: 68px;
         z-index: 0;
+
+        @media screen and (max-width: 800px) and (min-width: 601px) {
+            top: 63px;
+        }
     }
 
     .pinfo.left{
@@ -5540,14 +5553,28 @@ body.main .content{
         }
     }
 
-    .pinfo.right{
+    .pinfo.right {
         width: 65%;
+    }
+    .pinfo.full {
+        width: 100%;
+        clear: both;
+    }
+    .pinfo.right,
+    .pinfo.full {
+        h2 {
+            text-align: left;
+            clear: both;
+            margin: 0;
+            padding: 1.4em 0 0;
+
+        }
         margin-top: 4%;
         @media screen and (max-width: 870px){
             float: none;
             width: 100%;
         }
-        input{
+        input {
             width: 100%;
         }
 
@@ -5555,6 +5582,22 @@ body.main .content{
             display: block;
             margin-top: 20px;
             margin-bottom: 5px;
+        }
+
+        textarea{
+            width: 100%;
+            height: 240px;
+            display: block;
+            border:solid 3px $lpurple;
+            border-top: solid 1px $lpurple;
+            border-left:solid 1px $lpurple;
+            padding:10px 17px;
+            color: $gray;
+            box-sizing:border-box;
+            font-size: 1em;
+            font-family: $pfont;
+            margin-bottom: 5%;
+            margin-top: 0;
         }
 
         input{
@@ -5582,6 +5625,18 @@ body.main .content{
 
         input::placeholder{
             font-size: 1em;
+        }
+
+        .register-child {
+            .cAge {
+                input[type=checkbox],
+                input[type=radio] {
+                    display: none;
+                }
+                label {
+                    margin: 0;
+                }
+            }
         }
 
         .profile-infoleft{
@@ -6754,15 +6809,9 @@ body.main .content{
     @media screen and (max-width: 800px){
         height: 119px;
     }
-
-    @media screen and (max-width: 600px){
-        height: 155px;
-    }
 }
 .sprofile.search{
     transition: all 250ms ease-in-out;
-    position:sticky;
-    top: 116px;
     z-index: 3;
 
 
@@ -6848,7 +6897,7 @@ body.main .content{
 
         @media screen and (max-width: 600px){
             width: 100%;
-            height: 178px;
+            height: 119px;
         }
         p{
             color: white;
@@ -6970,7 +7019,7 @@ body.main .content{
         }
         .img-wrapper{
             position: relative;
-            width: 11%;
+            width: 75px;
             display: inline-block;
             margin: 0;
             img{
@@ -7011,7 +7060,7 @@ body.main .content{
         @media screen and (max-width:800px){
             .img-wrapper{
                 position: relative;
-                width: 17%;
+                width: 64px;
                 display: inline-block;
                 img{
                     // -webkit-clip-path: circle(106px at center);
@@ -7067,12 +7116,9 @@ body.main .content{
 
 .sitter-tab{
     width: 100%;
-    position:sticky;
-    top: 324px;
     //max-width: 1500px;
     margin:auto;
     background:white;
-    z-index: 2;
     transition: all 250ms ease-in-out;
 
     @media screen and (max-width: 1500px){
@@ -7141,17 +7187,17 @@ body.main .content{
 }
 
 .sitter-tab.scrolled{
-    top:235px;
-    @media screen and (max-width: 800px){
-        top: 233px;
-    }
-
-    @media screen and (max-width: 600px){
-        top: 229px;
-    }
+    //top:235px;
+    //@media screen and (max-width: 800px){
+    //    top: 233px;
+    //}
+    //
+    //@media screen and (max-width: 600px){
+    //    top: 229px;
+    //}
 
     .leftspace{
-        //display: none;
+        width: 0;
     }
 
 }
